# CodeSpace

./: .autofix-trigger  .bootstrap  .ci-trigger  .ci-trigger-2  .codespaceignore  .gitignore  .pages-trigger  .release-trigger  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  SECURITY.md  THIRD_PARTY.md
.bootstrap/: README.md  SHA256SUMS
.bootstrap/chunks/: part-000  part-001  part-002  part-003  part-004  part-005  part-006  part-007  part-008  part-009  part-010  part-011  part-012  part-013  part-014  part-015
.github/workflows/: bootstrap.yml  ci-automerge.yml  ci-report.yml  ci.yml  pages.yml  release.yml  rust-autofix.yml
artifacts/: DELIVERY_STATUS.json  SELF_TEST.md  self-context.txt  self-test-report.json
docs/: ARCHITECTURE.md  BENCHMARKS.md  BRANDING.md  RELEASE_CHECKLIST.md  ROADMAP.md
fixtures/sample/: .codespaceignore  README.md  worker.py
fixtures/sample/src/: auth.rs  lib.rs  service.rs
fixtures/sample/web/: login.ts
scripts/: build-release.sh  install.sh  self_test.py  validate_site.py
site/: 404.html  app.js  base.css  components.css  index.html  manifest.webmanifest  responsive.css  robots.txt  sitemap.xml  styles.css
src/: application.rs  cli.rs  context.rs  dashboard.rs  events.rs  export.rs  impact.rs  indexer.rs  lib.rs  main.rs  mcp.rs  mcp_manager.rs  memory.rs  model.rs  parser.rs  rest.rs  search.rs  secret.rs  server.rs  settings.rs  skills.rs  storage.rs  util.rs  workspace.rs
tests/: cli_smoke.rs  library.rs  v2_features.rs
