[package]
name = "codespace-cse"
version = "2.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["CodeSpace Contributors"]
description = "Local-first advanced IDE assistant with semantic graph, dashboard, MCP, and skills"
license = "Apache-2.0"
readme = "README.md"
keywords = ["code-graph", "mcp", "ai", "cli", "static-analysis"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**",
    "tests/**",
    "fixtures/**",
    "scripts/**",
    "docs/**",
    "site/**",
    ".github/workflows/**",
    ".codespaceignore",
    ".gitignore",
    "Cargo.toml",
    "Cargo.lock",
    "rust-toolchain.toml",
    "README.md",
    "LICENSE",
    "NOTICE",
    "SECURITY.md",
    "CONTRIBUTING.md",
    "CODE_OF_CONDUCT.md",
    "THIRD_PARTY.md",
    "CHANGELOG.md",
    "Makefile",
]

[lib]
name = "codespace"
path = "src/lib.rs"

[[bin]]
name = "cse"
path = "src/main.rs"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
debug = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
correctness = "deny"
unwrap_used = "deny"
expect_used = "deny"
